[package]
name = "rbx_dom_weak"
description = "Weakly-typed Roblox DOM implementation for Rust"
version = "1.10.1"
license = "MIT"
documentation = "https://docs.rs/rbx_dom_weak"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
rbx_types = { path = "../rbx_types", features = ["serde"] }

serde = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"

[dev-dependencies]
serde_json = "1.0"
maplit = "1.0"
